# zerotoilInDiskRP

./: .gitignore  LATEST_OFFICIAL_VERSION  README.md  index.html  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: tsg-code-writer.agent.md  tsg-document-writer.agent.md
.github/plugin/: marketplace.json
coding-abilities/: README.md
coding-abilities/ado-build-query/: ABILITY.md
coding-abilities/ado-work-item/: ABILITY.md
coding-abilities/dgrep-query/: ABILITY.md
coding-abilities/diskrp-acis-operations/: ABILITY.md
coding-abilities/ga-translation-layer/: ABILITY.md  ga-catalog.json
coding-abilities/geneva-action-call/: ABILITY.md
coding-abilities/icm-get-incident/: ABILITY.md
coding-abilities/kusto-query/: ABILITY.md
coding-abilities/llm-execute-prompt/: ABILITY.md
coding-abilities/mdm-query/: ABILITY.md
coding-abilities/storage-account-tenant-metadata/: ABILITY.md
coding-abilities/xds-api-call/: ABILITY.md
coding-abilities/xds-log-search/: ABILITY.md
coding-abilities/xstorecopilot-call-agent/: ABILITY.md
docs/: core_framework.md  folder_structure.md  index.md  run_in_backend_analysis.md  runtime_setup.md  tsg_coding_abilities.md  worker_zerotoil_install.md  zerotoil_official_build_guide.md  zerotoil_package_upload_spec.md  zerotoil_run_guide.md  zerotoil_user_guide.md  zerotoil_version_guide.md
docs/change-notes/: 2026-04-28-dgrep-retry-dry-run.md  2026-04-28-failover-gap-fixes.md  2026-04-29-xds-anchor-now-verbose-graceful-manual.md  2026-05-06-latest-first-defer-escalation-html-evidence.md  README.md  TEMPLATE.md
scripts/: build_and_upload_package.py  fetch_job_report.py  post_usage_smoketest.py  prepare_env.ps1  run_zerotoil_job.py  sync_zerotoil_notebooks.py
tests/: __init__.py  conftest.py
tools/: README.md  approve-feature.html  break-isf.html  break_isf.py  break_isf_server.py  diskrp_server.py  get-disk.html
zerotoil/: __init__.py
(+141 files in other folders)
